--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <body>
     <section>
       <h1>Testes</h1>
+      <p>A paragraph with a <a href="#">link</a></p>
+      <p>A second paragraph</p>
     </section>
 
     <script src="js/main.js"></script>
